--- a/angular/index.html
+++ b/angular/index.html
@@ -6,15 +6,19 @@
 
   <!-- Angular dependencies -->
   <script src="node_modules/angular/angular.min.js"></script>
-  <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
-
-  <!-- App src -->
-  <script src="js/app.js"></script>
+  <script src="node_modules/angular-resource/angular-resource.min.js"></script>
+  <script src="node_modules/angular-route/angular-route.min.js"></script>
 
 </head>
 <body>
 
+  <h1>Welcome to this testblog</h1>
+
   <div ng-view></div>
+
+  <!-- App src -->
+  <script src="app/js/app.js"></script>
+  <script src="app/js/blog-post-service.js"></script>
 
 </body>
 </html>
