react-router-redux progress

--- a/react-router-redux/index.html
+++ b/react-router-redux/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
-    <title>react-router-redux basic example</title>
-    <meta charset="utf8"/>
+    <meta charset="utf-8">
+    <title>Angular VS React-Router-Redux (react)</title>
   </head>
   <body>
+
+    <h1>Welcome to this testblog</h1>
+
     <div id="mount"></div>
-    <script src="/bundle.js"></script>
+
+    <!-- App src -->
+    <script src="dist/bundle.js"></script>
   </body>
 </html>
