--- a/angular/index.html
+++ b/angular/index.html
@@ -1,24 +1,24 @@
 <!doctype html>
 <html lang="en" ng-app="AngularVSReact">
-<head>
-  <meta charset="utf-8">
-  <title>Angular VS React (Angular)</title>
+  <head>
+    <meta charset="utf-8">
+    <title>Angular VS React-Router-Redux (Angular)</title>
 
-  <!-- Angular dependencies -->
-  <script src="node_modules/angular/angular.min.js"></script>
-  <script src="node_modules/angular-resource/angular-resource.min.js"></script>
-  <script src="node_modules/angular-route/angular-route.min.js"></script>
+    <!-- Angular dependencies -->
+    <script src="node_modules/angular/angular.min.js"></script>
+    <script src="node_modules/angular-resource/angular-resource.min.js"></script>
+    <script src="node_modules/angular-route/angular-route.min.js"></script>
 
-</head>
-<body>
+  </head>
+  <body>
 
-  <h1>Welcome to this testblog</h1>
+    <h1>Welcome to this testblog</h1>
 
-  <div ng-view></div>
+    <div ng-view></div>
 
-  <!-- App src -->
-  <script src="app/js/app.js"></script>
-  <script src="app/js/blog-post-service.js"></script>
+    <!-- App src -->
+    <script src="app/js/app.js"></script>
+    <script src="app/js/blog-post-service.js"></script>
 
-</body>
+  </body>
 </html>
