--- a/react-router-redux/index.html
+++ b/react-router-redux/index.html
@@ -11,6 +11,6 @@
     <div id="mount"></div>
 
     <!-- App src -->
-    <script src="dist/bundle.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
