--- a/react-router-redux/index.html
+++ b/react-router-redux/index.html
@@ -1,16 +1,11 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset="utf-8">
-    <title>Angular VS React-Router-Redux (react)</title>
+    <title>Redux async example</title>
   </head>
   <body>
-
-    <h1>Welcome to this testblog</h1>
-
-    <div id="mount"></div>
-
-    <!-- App src -->
-    <script src="bundle.js"></script>
+    <div id="root">
+    </div>
+    <script src="/dist/bundle.js"></script>
   </body>
 </html>
