Now the Angular and the react-router-redux blogs look identical

--- a/angular/index.html
+++ b/angular/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="AngularVSReact">
   <head>
     <meta charset="utf-8">
-    <title>Angular VS React-Router-Redux (Angular)</title>
+    <title>Angular 1</title>
 
     <!-- Angular dependencies -->
     <script src="node_modules/angular/angular.min.js"></script>
