--- a/react-router-redux/index.html
+++ b/react-router-redux/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Redux async example</title>
+    <meta charset="utf-8">
+    <title>React-Router-Redux</title>
   </head>
   <body>
+
+    <h1>Welcome to this testblog</h1>
+
     <div id="root">
     </div>
+
     <script src="/dist/bundle.js"></script>
+
   </body>
 </html>
