--- a/react-router-redux/index.html
+++ b/react-router-redux/index.html
@@ -11,6 +11,7 @@
     <div id="root">
     </div>
 
+    <script src="/dist/common.js"></script>
     <script src="/dist/bundle.js"></script>
 
   </body>
