New diagrams and added scroll action to test

--- a/browser-perf-tests/test_charts/index.html
+++ b/browser-perf-tests/test_charts/index.html
@@ -45,10 +45,18 @@
 
             function drawCharts() {
 
+                var chartCount = 0;
+
                 for( var chartName in chartOutputObj ) {
 
                     drawChart( chartName, chartOutputObj[ chartName ] )
+
+                    chartCount++
                 }
+
+                $( document.body ).append(
+                    '<div> Total number of charts: ' + chartCount + '</div>'
+                )
             }
 
             function drawChart( chartName, chartOutput ) {
